--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -11,7 +11,7 @@
   font-family: inherit;
   border-radius: 4px;
   padding: 10px 32px;
-  min-width: 216px;
+  width: 216px;
   border: 0px;
 
   transition: background-color var(--trns);
