--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,5 +1,5 @@
 .clients {
-  padding: 94px 0;
+  padding: 60px 0;
 
   &__title {
     font-size: 36px;
@@ -7,25 +7,9 @@
     text-align: center;
     margin-bottom: 50px;
   }
-
   &__list {
     display: flex;
-  }
-
-  &__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 170px;
-    height: 92px;
-    border: 1px solid var(--additional-items-color);
-    border-radius: 4px;
-
-    transition: border var(--trns);
-  }
-
-  &__item + &__item {
-    margin-left: 30px;
+    flex-wrap: wrap;
   }
 
   &__icon {
@@ -43,7 +27,61 @@
   &__link:focus &__icon {
     fill: var(--accent-color);
   }
+
+  &__link {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    height: 92px;
+    border: 1px solid var(--additional-items-color);
+    border-radius: 4px;
+
+    transition: border var(--trns);
+  }
+  @media screen and (min-width: 480px) and (max-width: 767px) {
+    &__link {
+      width: 210px;
+    }
+    &__item:nth-child(odd) {
+      margin-right: 30px;
+    }
+    &__item {
+      margin-bottom: 30px;
+    }
+    &__item:nth-last-child(-n + 2) {
+      margin-bottom: 0;
+    }
+  }
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &__link {
+      width: 226px;
+    }
+    &__item {
+      margin-right: 30px;
+    }
+    &__item:nth-child(3n + 3) {
+      margin-right: 0;
+    }
+
+    &__item {
+      margin-bottom: 30px;
+    }
+    &__item:nth-last-child(-n + 3) {
+      margin-bottom: 0;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+
+    &__link {
+      width: 170px;
+    }
+
+    &__item + &__item {
+      margin-left: 30px;
+    }
+  }
 }
-
-
-
