--- a/sass/components/_features.scss
+++ b/sass/components/_features.scss
@@ -5,8 +5,13 @@
 }
 
 .features {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
+
+  @media screen and (min-width: 1200px) {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
 
   &__title {
     font-size: 14px;
@@ -14,6 +19,10 @@
     text-transform: uppercase;
     margin-top: 0;
     margin-bottom: 10px;
+
+    @media screen and (max-width: 767px) {
+      text-align: center;
+    }
   }
 
   &__text {
@@ -27,25 +36,58 @@
 
 .features-list {
   display: flex;
+  flex-wrap: wrap;
 
   &__item {
     display: block;
-    width: 270px;
     border-radius: 4px;
+    margin-bottom: 30px;
   }
-
-  &__item:not(:last-child) {
-    margin-right: 30px;
-  }
-
   &__box {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 270px;
+
     height: 120px;
     margin-bottom: 30px;
     background-color: var(--secondary-bkg-color);
     border-radius: 4px;
+  }
+
+  @media screen and (min-width: 480px) {
+    &__item {
+      width: 450px;
+    }
+
+    &__box {
+      width: 450px;
+    }
+  }
+
+  @media screen and (min-width: 768px) {
+    &__item {
+      width: 354px;
+    }
+    &__item:nth-child(odd) {
+      margin-right: 30px;
+    }
+
+    &__box {
+      width: 354px;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    &__item {
+      width: 270px;
+    }
+
+    &__item:not(:last-child) {
+      margin-right: 30px;
+    }
+
+    &__box {
+      width: 270px;
+    }
   }
 }
