--- a/sass/components/_footer-address.scss
+++ b/sass/components/_footer-address.scss
@@ -1,4 +1,7 @@
 .address {
+  // @media screen and (min-width: 768px) and (max-width: 1199px) {
+  //   margin-left: 61px;
+  // }
   &__mail,
   &__tel {
     display: block;
@@ -6,6 +9,8 @@
     height: 21px;
     color: var(--primary-telmail-color);
     text-decoration: none;
+    margin-left: auto;
+    margin-right: auto;
   }
 
   &__mail {
@@ -13,12 +18,16 @@
   }
 
   &__list {
-    display: inline-block;
+    display: block;
     font-weight: 400;
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
     font-style: normal;
+    text-align: center;
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
   }
 
   &__text {
@@ -28,7 +37,7 @@
   }
 
   &__link {
-    display: inline-block;
+    display: block;
     width: 145px;
     height: 31px;
     color: var(--accent-color);
@@ -38,14 +47,27 @@
     font-size: 26px;
     line-height: 1.19;
     margin-bottom: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    @media screen and (min-width: 1200px) {
+      margin: 0 0 20px 0;
+    }
+
+    @media screen and (min-width: 480px) and (max-width: 1199px) {
+      width: 154px;
+      height: 28px;
+      line-height: 1.16;
+    }
   }
 
   &__googlemap {
-    display: inline-block;
+    display: block;
     width: 231px;
     height: 21px;
     margin-bottom: 9px;
     color: var(--secondary-text-color);
     text-decoration: none;
+    margin-left: auto;
+    margin-right: auto;
   }
 }
