--- a/sass/components/_footer-signup.scss
+++ b/sass/components/_footer-signup.scss
@@ -1,4 +1,9 @@
 .footer-signup {
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 60px;
+  }
   &__title {
     margin-top: 0;
     font-style: normal;
@@ -9,18 +14,31 @@
     text-transform: uppercase;
     margin-bottom: 20px;
     color: #ffffff;
+    text-align: center;
+
+    @media screen and (min-width: 1200px) {
+      text-align: left;
+    }
   }
 
   &__form {
-    display: flex;
+    display: block;
+    @media screen and (min-width: 1200px) {
+      display: flex;
+    }
   }
 
   &__btn {
     display: flex;
     justify-content: space-between;
-    margin-left: 12px;
+
     width: 200px;
-   
+    margin-top: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    @media screen and (min-width: 1200px) {
+      margin: 0 0 0 12px;
+    }
   }
 
   &__icon {
@@ -31,7 +49,7 @@
   &__input {
     box-sizing: border-box;
     padding: 15px;
-    width: 358px;
+    width: 450px;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -39,5 +57,8 @@
     background-color: transparent;
     outline: 1px solid transparent;
     color: var(--secondary-text-color);
+    @media screen and (min-width: 1200px) {
+      width: 358px;
+    }
   }
 }
