--- a/sass/components/_footer-social.scss
+++ b/sass/components/_footer-social.scss
@@ -1,19 +1,42 @@
 .footer-box {
-  display: flex;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: nowrap;
+  }
 }
-
 .footer {
   padding: 60px 0 60px 0;
   background-color: #2f303a;
 }
 
 .footer-social {
-  margin-left: 70px;
-  margin-right: 93px;
+  margin: 60px auto;
+  text-align: center;
+  @media screen and (min-width: 768px) {
+    margin: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-left: 70px;
+    margin-right: 93px;
+    margin-top: 0;
+    margin-bottom: 0;
+    text-align: left;
+  }
 
   &__list {
     display: flex;
     width: 206px;
+    margin-left: auto;
+    margin-right: auto;
+    @media screen and (min-width: 1200px) {
+      margin: 0;
+    }
   }
 
   &__icon {
