--- a/sass/components/_hero-modal-btn.scss
+++ b/sass/components/_hero-modal-btn.scss
@@ -7,6 +7,7 @@
     height: 581px;
     background-color: var(--secondary-text-color);
     padding: 40px;
-
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
     transition: transform var(--trns);
 }
