--- a/sass/components/_backdrop.scss
+++ b/sass/components/_backdrop.scss
@@ -7,6 +7,7 @@
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   visibility: visible;
+  overflow-y: scroll;
 
   transition: opacity var(--trns), visibility var(--trns);
 
