--- a/sass/components/_footer-signup.scss
+++ b/sass/components/_footer-signup.scss
@@ -39,6 +39,28 @@
     @media screen and (min-width: 1200px) {
       margin: 0 0 0 12px;
     }
+    color: var(--secondary-text-color);
+    background-color: var(--accent-color);
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    cursor: pointer;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    font-family: inherit;
+    border-radius: 4px;
+    padding: 10px 32px;
+    width: 216px;
+    border: 0px;
+
+    transition: background-color var(--trns);
+
+    &:hover,
+    &:focus {
+      color: var(--secondary-text-color);
+      background-color: #188ce8;
+    }
   }
 
   &__icon {
