--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -15,11 +15,16 @@
   &__title {
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     text-align: center;
     letter-spacing: 0.03em;
     color: #212121;
     margin-bottom: 12px;
+
+    @media screen and (min-width: 1200px) {
+      font-size: 20px;
+      line-height: 1.15;
+    }
   }
 
   &__label {
@@ -114,21 +119,32 @@
   }
 
   &__checkbox-text {
-    height: 24px;
+    height: 14px;
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.16;
     letter-spacing: 0.03em;
     color: #757575;
+    @media screen and (min-width: 1200px) {
+      height: 24px;
+      font-size: 14px;
+      line-height: 1.71;
+    }
   }
 
   &__checkbox-link {
     font-weight: 400;
-    font-size: 14px;
-    line-height: 1.71px;
+    font-size: 12px;
+    line-height: 1.16px;
     letter-spacing: 0.03em;
     text-decoration-line: underline;
     color: #2196f3;
+
+    @media screen and (min-width: 1200px) {
+      height: 24px;
+      font-size: 14px;
+      line-height: 1.71;
+    }
   }
 }
 
