--- a/sass/components/_team.scss
+++ b/sass/components/_team.scss
@@ -1,14 +1,21 @@
 .team {
-  padding-bottom: 94px;
-  padding-top: 94px;
+  padding: 60px 0;
+
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0;
+  }
 
   &__title {
-    font-size: 36px;
-    line-height: 1.16;
+    font-size: 28px;
+    line-height: 1.18;
     text-align: center;
     padding-bottom: 0;
     margin-top: 0;
     margin-bottom: 50px;
+    @media screen and (min-width: 1200px) {
+      font-size: 36px;
+      line-height: 1.16;
+    }
   }
 
   &__box-one,
@@ -26,14 +33,26 @@
 
   &__list {
     display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 30px;
   }
 
   &__item {
-    margin-right: 30px;
     background-color: var(--secondary-text-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
+
+    @media screen and (min-width: 480px) {
+      flex-basis: calc((100% - 0px) / 1);
+    }
+    @media screen and (min-width: 768px) {
+      flex-basis: calc((100% - 30px) / 2);
+    }
+    @media screen and (min-width: 1200px) {
+      flex-basis: calc((100% - 90px) / 4);
+    }
   }
 
   &__item:nth-child(4n) {
