--- a/sass/components/_work.scss
+++ b/sass/components/_work.scss
@@ -1,4 +1,9 @@
 .work {
+  @media screen and (max-width: 1199px) {
+    visibility: hidden;
+    pointer-events: none;
+    position: absolute;
+  }
   padding-bottom: 94px;
 
   &__title {
