--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,5 +1,3 @@
-
-
 @import './utils/variables';
 
 @import './base/base';
@@ -9,6 +7,8 @@
 @import './components/container';
 
 @import './components/header';
+
+@import './components/mobile-menu';
 
 @import './components/nav-list';
 
@@ -41,6 +41,3 @@
 @import './components/hero-modal-btn';
 
 @import './components/form';
-
-
-
