--- a/sass/components/_footer-signup.scss
+++ b/sass/components/_footer-signup.scss
@@ -9,7 +9,7 @@
     font-style: normal;
     font-weight: 700;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
     margin-bottom: 20px;
@@ -51,7 +51,6 @@
     font-family: inherit;
     border-radius: 4px;
     padding: 10px 32px;
-    width: 216px;
     border: 0px;
 
     transition: background-color var(--trns);
