--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -17,6 +17,11 @@
   }
 }
 .header-contacts {
+  @media screen and (min-width: 768px) {
+    &__item:not(:last-child) {
+      margin-bottom: 10px;
+    }
+  }
   @media screen and (min-width: 1200px) {
     display: flex;
     margin-left: auto;
@@ -32,9 +37,9 @@
     // padding-bottom: 32px;
     align-items: center;
   }
-  &__link:nth-child(1) {
-    margin-bottom: 10px;
-  }
+  // &__link {
+  //   margin-top: 10px;
+  // }
 
   &__link {
     color: var(--title-text-color);
