--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -3,7 +3,7 @@
   max-width: 480px;
   margin: 0 auto;
   background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-    url(../../images/hero/img_sm@1x.jpg);
+    url(../images/hero/img_sm@1x.jpg);
 
   background-repeat: no-repeat;
   background-position: center;
@@ -16,7 +16,7 @@
 @media screen and (min-width: 480px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero/img_sm@1x.jpg);
+      url(../images/hero/img_sm@1x.jpg);
     max-width: 767px;
   }
   @media screen and (min-device-pixel-ratio: 2),
@@ -24,7 +24,7 @@
     screen and (min-resolution: 2dppx) {
     .hero {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/hero/img_sm@2x.jpg);
+        url(../images/hero/img_sm@2x.jpg);
       max-width: 767px;
     }
   }
@@ -33,7 +33,7 @@
 @media screen and (min-width: 768px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero/img_md@1x.jpg);
+      url(../images/hero/img_md@1x.jpg);
     max-width: 1199px;
   }
   @media screen and (min-device-pixel-ratio: 2),
@@ -41,7 +41,7 @@
     screen and (min-resolution: 2dppx) {
     .hero {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/hero/img_md@2x.jpg);
+        url(../images/hero/img_md@2x.jpg);
       max-width: 1199px;
     }
   }
@@ -49,7 +49,7 @@
 @media screen and (min-width: 1200px) {
   .hero {
     background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../../images/hero/Img_lg@1x.jpg);
+      url(../images/hero/Img_lg@1x.jpg);
     max-width: 1600px;
   }
   @media screen and (min-device-pixel-ratio: 2),
@@ -57,7 +57,7 @@
     screen and (min-resolution: 2dppx) {
     .hero {
       background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-        url(../../images/hero/Img_lg@2x.jpg);
+        url(../images/hero/Img_lg@2x.jpg);
       max-width: 1600px;
     }
   }
