--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -14,6 +14,7 @@
   &__list {
     display: flex;
     flex-wrap: wrap;
+    gap: 30px;
   }
 
   &__icon {
@@ -36,6 +37,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    // width: 210px;
 
     height: 92px;
     border: 1px solid var(--additional-items-color);
@@ -43,49 +45,17 @@
 
     transition: border var(--trns);
   }
-  @media screen and (min-width: 480px) and (max-width: 767px) {
-    &__link {
-      width: 210px;
-    }
-    &__item:nth-child(odd) {
-      margin-right: 30px;
-    }
-    &__item {
-      margin-bottom: 30px;
-    }
-    &__item:nth-last-child(-n + 2) {
-      margin-bottom: 0;
-    }
+  &__item {
+    width: calc((100% - 30px) / 2);
   }
-
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    &__link {
-      width: 226px;
-    }
+  @media screen and (min-width: 768px) {
     &__item {
-      margin-right: 30px;
+      width: calc((100% - 60px) / 3);
     }
-    &__item:nth-child(3n + 3) {
-      margin-right: 0;
-    }
-
-    &__item {
-      margin-bottom: 30px;
-    }
-    &__item:nth-last-child(-n + 3) {
-      margin-bottom: 0;
-    }
-  }
-
-  @media screen and (min-width: 1200px) {
-    padding: 94px 0;
-
-    &__link {
-      width: 170px;
-    }
-
-    &__item + &__item {
-      margin-left: 30px;
+    @media screen and (min-width: 1200px) {
+      &__item {
+        width: calc((100% - 150px) / 6);
+      }
     }
   }
 }
