--- a/sass/components/_footer-signup.scss
+++ b/sass/components/_footer-signup.scss
@@ -70,7 +70,7 @@
   &__input {
     box-sizing: border-box;
     padding: 15px;
-    width: 450px;
+    width: 100%;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -78,6 +78,9 @@
     background-color: transparent;
     outline: 1px solid transparent;
     color: var(--secondary-text-color);
+    @media screen and (min-width: 480px) {
+      width: 450px;
+    }
     @media screen and (min-width: 1200px) {
       width: 358px;
     }
