--- a/sass/components/_hero-title.scss
+++ b/sass/components/_hero-title.scss
@@ -9,7 +9,7 @@
   margin-left: auto;
   margin-right: auto;
   margin-bottom: 30px;
-  width: 360px;
+  max-width: 360px;
 
   @media screen and (min-width: 1200px) {
     width: 696px;
