--- a/sass/components/_hero-title.scss
+++ b/sass/components/_hero-title.scss
@@ -12,7 +12,7 @@
   max-width: 360px;
 
   @media screen and (min-width: 1200px) {
-    width: 696px;
+    max-width: 696px;
 
     font-size: 44px;
     line-height: 1.36;
