--- a/sass/components/_footer-signup.scss
+++ b/sass/components/_footer-signup.scss
@@ -71,13 +71,14 @@
     box-sizing: border-box;
     padding: 15px;
     width: 100%;
+    color: rgba(255, 255, 255, 0.6);
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
     border-radius: 4px;
     background-color: transparent;
     outline: 1px solid transparent;
-    color: var(--secondary-text-color);
+    // color: var(--secondary-text-color);
     @media screen and (min-width: 480px) {
       width: 450px;
     }
