--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -51,9 +51,13 @@
     text-decoration: none;
     letter-spacing: 0.02em;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
+    font-size: 12px;
+    line-height: 1.16;
     transition: color var(--trns);
+    @media screen and (min-width: 1200px) {
+      font-size: 14px;
+      line-height: 1.14;
+    }
   }
 
   &__link:hover,
