--- a/sass/components/_hero-modal-btn.scss
+++ b/sass/components/_hero-modal-btn.scss
@@ -4,7 +4,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(1);
-  width: 450px;
+  width: 95%;
   height: 609px;
   background-color: var(--secondary-text-color);
   padding: 40px;
@@ -12,6 +12,9 @@
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform var(--trns);
+  @media screen and (min-width: 480px) {
+    width: 450px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
