--- a/css/main.css
+++ b/css/main.css
@@ -907,6 +907,7 @@ img {
   display: inline-block;
 }
 .address__link {
+  text-align: center;
   display: block;
   width: 145px;
   height: 31px;
@@ -1246,8 +1247,26 @@ img {
         flex-basis: calc((100% - 60px) / 3);
   }
 }
+@media screen and (min-width: 768px) {
+  .cards-list__item {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
 .cards-list__link {
   display: block;
+}
+@media screen and (min-width: 768px) {
+  .cards-list__link {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
 }
 .cards-list__link:hover, .cards-list__link:focus {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
@@ -1263,6 +1282,13 @@ img {
   border: 1px solid #eeeeee;
   border-top: 0;
   padding: 20px 24px;
+}
+@media screen and (min-width: 768px) {
+  .cards-list__border {
+    -webkit-box-flex: 1;
+        -ms-flex-positive: 1;
+            flex-grow: 1;
+  }
 }
 .cards-list__heading {
   font-size: 18px;
@@ -1328,12 +1354,6 @@ img {
   opacity: 1;
   -webkit-transform: translateY(0%);
           transform: translateY(0%);
-}
-
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .additional-padding {
-    padding: 20px 24px 56px 24px;
-  }
 }
 
 .backdrop {
